--- a/Project_2_Image_segmentation.ipynb
+++ b/Project_2_Image_segmentation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPyooebv5AvSFiK77rqWi18",
+      "authorship_tag": "ABX9TyOR8D31R/VTvHijfA0RSbUL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -310,6 +310,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Changing the json to a mask"
+      ],
+      "metadata": {
+        "id": "78nfWT8_ezAr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import json\n",
@@ -320,10 +329,10 @@
         "    with open(json_path) as f:\n",
         "        points = json.load(f)\n",
         "\n",
-        "    # Scale all points to match the resized image\n",
+        "    # Scaling all points so that they can match the resized image\n",
         "    scaled = [(x * img_size[0] / original_size[1], y * img_size[1] / original_size[0]) for x, y in points]\n",
         "\n",
-        "    # Draw the polygon onto a blank mask\n",
+        "    # Draw the mask\n",
         "    mask = Image.new('L', img_size, 0)\n",
         "    draw = ImageDraw.Draw(mask)\n",
         "    draw.polygon(scaled, outline=1, fill=1)\n",
@@ -335,6 +344,15 @@
       },
       "execution_count": 26,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating a dataset"
+      ],
+      "metadata": {
+        "id": "TTNrr_5Re96S"
+      }
     },
     {
       "cell_type": "code",
@@ -387,6 +405,15 @@
       },
       "execution_count": 29,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Unet model"
+      ],
+      "metadata": {
+        "id": "5oOumFMkfFJl"
+      }
     },
     {
       "cell_type": "code",
@@ -459,6 +486,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Trainiong loop"
+      ],
+      "metadata": {
+        "id": "0EAIEFDlfJuK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -509,6 +545,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Restults"
+      ],
+      "metadata": {
+        "id": "VX544tJ1fOEs"
+      }
     },
     {
       "cell_type": "code",
